Fix
Animations cut off due to performance

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -122,84 +122,3 @@ code {
 .glyphicon-menu-hamburger {
     font-size: 20px;
 }
-
-
-/****/
-
-#nav-icon3 {
-    width: 50px;
-    height: 40px;
-    position: relative;
-    margin: 10px auto;
-    margin-left: 10px;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .5s ease-in-out;
-    -moz-transition: .5s ease-in-out;
-    -o-transition: .5s ease-in-out;
-    transition: .5s ease-in-out;
-    cursor: pointer;
-}
-
-#nav-icon3 span {
-    display: block;
-    position: absolute;
-    height: 3px;
-    width: 75%;
-    margin-left: 12.5%;
-    background: var(--dark-purple);
-    border-radius: 2px;
-    opacity: 1;
-    left: 0;
-    -webkit-transform: rotate(0deg);
-    -moz-transform: rotate(0deg);
-    -o-transform: rotate(0deg);
-    transform: rotate(0deg);
-    -webkit-transition: .25s ease-in-out;
-    -moz-transition: .25s ease-in-out;
-    -o-transition: .25s ease-in-out;
-    transition: .25s ease-in-out;
-}
-
-
-/* Icon 3 */
-
-#nav-icon3 span:nth-child(1) {
-    top: 7px;
-}
-
-#nav-icon3 span:nth-child(2), #nav-icon3 span:nth-child(3) {
-    top: 17px;
-}
-
-#nav-icon3 span:nth-child(4) {
-    top: 27px;
-}
-
-#nav-icon3:not(.collapsed) span:nth-child(1) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
-}
-
-#nav-icon3:not(.collapsed) span:nth-child(2) {
-    -webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -o-transform: rotate(45deg);
-    transform: rotate(45deg);
-}
-
-#nav-icon3:not(.collapsed) span:nth-child(3) {
-    -webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -o-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-}
-
-#nav-icon3:not(.collapsed) span:nth-child(4) {
-    top: 18px;
-    width: 0%;
-    left: 50%;
-}
